crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.TextLog.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "text",
        [
            "",
        ],
    ),
    (
        "level",
        [
            "INFO",
        ],
    ),
    (
        "color",
        [
            "2428259839",
        ],
    ),
]
